# src/main/java/org/duckdns/celebritystrike/celebritystrike/dto/req/GameItemCreateReqDto.java
@@ -1,0 +1,10 @@
+package org.duckdns.celebritystrike.celebritystrike.dto.req;
+
+public record GameItemCreateReqDto(
+    String name,
+    String type,
+    String region,
+    String details,
+    Integer price,
+    String gameName
+) {} 
