# src/main/java/org/duckdns/celebritystrike/celebritystrike/dto/req/GameItemUpdateReqDto.java
@@ -1,0 +1,9 @@
+package org.duckdns.celebritystrike.celebritystrike.dto.req;
+
+public record GameItemUpdateReqDto(
+    String name,
+    String type,
+    String region,
+    String details,
+    Integer price
+) {} 
