# src/main/java/org/duckdns/celebritystrike/celebritystrike/dto/req/GameUpdateReqDto.java
@@ -1,0 +1,7 @@
+package org.duckdns.celebritystrike.celebritystrike.dto.req;
+
+public record GameUpdateReqDto(
+    String title,
+    String description,
+    String instruction
+) {} 
