# src/main/java/org/duckdns/celebritystrike/celebritystrike/dto/req/ImageCreateReqDto.java
@@ -1,0 +1,6 @@
+package org.duckdns.celebritystrike.celebritystrike.dto.req;
+
+public record ImageCreateReqDto(
+    String imageUrl,
+    String gameName
+) {} 
