# src/main/java/org/duckdns/celebritystrike/celebritystrike/dto/req/ImageUpdateReqDto.java
@@ -1,0 +1,5 @@
+package org.duckdns.celebritystrike.celebritystrike.dto.req;
+
+public record ImageUpdateReqDto(
+    String imageUrl
+) {} 
